# Veritas

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  builder.go  builder_test.go  circom_darwin_arm64.go  circom_ffi.go  circom_ffi_darwin_arm64.go  circom_linux_x86_64.go  go.mod  go.sum  veritas.go  veritas_test.go  witness.go
.github/workflows/: compile-ffi.yml
circom/: Cargo.toml  README.md
circom/circom_algebra/: Cargo.toml
circom/circom_algebra/src/: algebra.rs  modular_arithmetic.rs
circom/circom_ffi/: Makefile  cargo.toml
circom/circom_ffi/src/: compile.rs  compile_ffi.rs  json_export.rs  lib.rs  program_archive_ffi.rs  witness.rs  witness_ffi.rs
circom/code_producers/src/c_elements/: c_code_generator.rs  mod.rs
circom/code_producers/src/c_elements/common/: circom.hpp  main.cpp
circom/code_producers/src/wasm_elements/: mod.rs  wasm_code_generator.rs
circom/code_producers/src/wasm_elements/common/: generate_witness.js  witness_calculator.js
circom/compiler/: Cargo.toml
circom/compiler/src/: lib.rs
circom/compiler/src/circuit_design/: build.rs  circuit.rs  mod.rs
circom/compiler/src/hir/: analysis_utilities.rs  component_preprocess.rs  merger.rs  mod.rs  sugar_cleaner.rs  type_inference.rs  very_concrete_program.rs
circom/compiler/src/intermediate_representation/: address_type.rs  call_bucket.rs  ir_interface.rs  load_bucket.rs  location_rule.rs  return_bucket.rs  store_bucket.rs  translate.rs  types.rs  value_bucket.rs
circom/compiler/src/ir_processing/: build_inputs_info.rs  build_stack.rs  reduce_stack.rs  set_arena_size.rs
circom/constraint_generation/src/: assignment_utils.rs  compute_constants.rs  execute.rs  lib.rs
circom/constraint_generation/src/environment_utils/: bus_representation.rs  component_representation.rs  environment.rs
circom/constraint_generation/src/execution_data/: executed_bus.rs  executed_program.rs  executed_template.rs
circom/constraint_list/src/: lib.rs  sym_porting.rs
circom/constraint_writers/: Cargo.toml
circom/constraint_writers/src/: lib.rs  sym_writer.rs
circom/dag/: Cargo.toml
circom/dag/src/: lib.rs  sym_porting.rs
circom/parser/: Cargo.toml
circom/parser/src/: common.rs  file_paser.tmp  lang.lalrpop  lib.rs  parser.rs  parser_logic.rs  syntax_sugar_remover.rs
circom/program_structure/: Cargo.toml
circom/program_structure/src/: lib.rs
circom/program_structure/src/abstract_syntax_tree/: ast.rs  ast_shortcuts.rs  expression_impl.rs  statement_impl.rs
circom/program_structure/src/program_library/: error_code.rs  error_definition.rs  function_data.rs  mod.rs  program_archive.rs  program_archive.tmp  program_merger.rs  programs.rs  template_data.rs
circom/program_structure/src/utils/: environment.rs  memory_slice.rs
circom/type_analysis/src/: check_types.rs
circom/type_analysis/src/analyzers/: custom_gate_analysis.rs  functions_free_of_template_elements.rs  no_returns_in_template.rs  signal_declaration_analysis.rs  symbol_analysis.rs  tag_analysis.rs  type_check.rs  unknown_known_analysis.rs
circom/type_analysis/src/decorators/: component_type_inference.rs  constants_handler.rs  type_reduction.rs
circom_ffi/: README.md
circom_ffi/circom/: Cargo.toml
circom_ffi/circom/src/: circuit.rs  circuit_wasm.rs  constraint_system.rs  ffi.rs  json_export.rs  lib.rs  reporting.rs  witness.rs
circom_ffi/circom_algebra/: Cargo.toml
circom_ffi/code_producers/: Cargo.toml
circom_ffi/compiler/: Cargo.toml
circom_ffi/compiler/src/: lib.rs
circom_ffi/compiler/src/circuit_design/: build.rs  circuit.rs
circom_ffi/compiler/src/intermediate_representation/: translate.rs
circom_ffi/constant_tracking/: Cargo.toml
circom_ffi/constraint_generation/: Cargo.toml
circom_ffi/constraint_generation/src/: execute.rs  lib.rs
circom_ffi/constraint_list/: Cargo.toml
circom_ffi/constraint_writers/: Cargo.toml
circom_ffi/dag/: Cargo.toml
circom_ffi/dag/src/: lib.rs  map_to_constraint_list.rs
circom_ffi/parser/: Cargo.toml
circom_ffi/parser/src/: lib.rs  parser_logic.rs
circom_ffi/program_structure/: Cargo.toml
circom_ffi/program_structure/src/abstract_syntax_tree/: ast.rs
circom_ffi/program_structure/src/program_library/: file_definition.rs
circom_ffi/type_analysis/: Cargo.toml
examples/: assigned_but_not_constrained.go  assigned_but_not_constrained_test.go  basic_template_test.go  extern_templates_test.go  multi_template_test.go  step_accumulator_test.go
