[package]
name = "code_producers"
version = "2.2.0"
edition = "2018"
license = "LGPL-3.0-only"
description = "Support crate for the Veritas"
repository = "https://github.com/0xbow.io/veritas"
authors = [
  "0xbow.io",
]

[dependencies]
handlebars = "6.1.0"
lz_fnv = "0.1.2"
num-bigint-dig = "0.8.4"
serde_json = "1.0.128"
