[package]
name = "program_structure"
version = "2.2.0"
edition = "2018"
license = "LGPL-3.0-only"
description = "Support crate for the Veritas"
repository = "https://github.com/0xbow.io/veritas"
authors = [
  "0xbow.io",
]


[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
regex = "1.11.0"
rustc-hex = "2.1.0"
num-bigint-dig = "0.8.4"
num-traits = "0.2.19"
serde = "1.0.210"
serde_derive = "1.0.210"
