[package]
name = "type_analysis"
version = "2.2.0"
edition = "2018"
license = "LGPL-3.0-only"
description = "Support crate for the Veritas"
repository = "https://github.com/0xbow.io/veritas"
authors = [
  "0xbow.io",
]


[dependencies]
program_structure = {path = "../program_structure"}
num-bigint-dig = "0.8.4"
num-traits = "0.2.19"
